# QizFirst

./: .gitignore  Cargo.toml  README.md  setup.py
examples/: backtest_app.py  market_analysis.py
qiz_first/: __init__.py  backtest_engine.py  data_fetcher.py  db_utils.py  market_analyzer.py
src/: lib.rs  python.rs
src/backtest/: mod.rs
src/data/: mod.rs
src/storage/: mod.rs
src/utils/: mod.rs
