[package]
name = "qiz_first"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustdb = "0.1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
pyo3 = { version = "0.19", features = ["extension-module"] }
polars = "0.32"
anyhow = "1.0"

[lib]
name = "qiz_first"
crate-type = ["cdylib", "rlib"]